--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap');
+
 body{
     background-color: brown;
     color:antiquewhite;
+    font-family: "Josefin Sans", sans-serif;
 }
 
 p{
@@ -10,6 +13,8 @@ p{
 
 h1{
     text-align: center;
+    font-weight: 300;
+    font-style: oblique;
 }
 
 nav{
